     - added Speedy support for the AFS backend
     - fixed missing content-length in thumbnail responses bug
     - fixed missing cache control 
     - fixed ACL bug (thanx Thomas Klose <thomas.klose@gmx.com>)
     - added wrappers for a mod_auth_kerberos free authentication for SMB and AFS backend
     - added username/password/workgroup authentication support for SMB backend

0.8.3: 2012/6/6
     - fixed typos
     - added virtual link support to the FS/AFS/GFS backends
     - fixed temporary space consumption bug after ZIP file upload in the SMB/DBB backend (thx Aleksander Gudalo) 
     - added revision limit for a file to RCS backend (maxrevisions option)
     - fixed Kerberos ticket copying bug (changed helper/webdavwrapper-smb.c)

0.8.2: 2012/23/2
     - fixed doc
     - fixed deprecated hash handling
     - improved error handling in SMB backend
     - fixed Mac finder related bug with '&' in a pathname (thanx Florian Freund <mail@floek.net>)
     - fixed Speedy bugs (FS, GFS, SMB, DBB, RCS are Speedy/PersistentPerl safe now)
     - added a wrapper for the SMB backend and Speedy support 
     - added initial directory support for the SMB backend requested by Aleksander Gudalo
     - added Italian translation (thanx Simone Iozia <simone.iozia@gmail.com>)
     - added the RCS backend

0.8.1: 2011/7/11
     - Web interface:
           - added auto refresh feature
	   - fixed MAXFILENAMESIZE bug related to short SMB aliases
     - fixed Window Vista/7 client access bug (missing str2time in WebDAV::Properties; thanx Simon Jalandt <simon@jalandt.net>)
     - added missing doc

0.8.0: 2011/25/08
     - replaced OSSP::uuid with UUID::Tiny
     - migrated backend code into modules (FS, AFS, GFS backend modules)
     - added SMB/CIFS backend module for access ADS integrated Windows/Samba shares
     - added example DBB backend module (database backend)
     - fixed AFS performance bugs 
     - fixed security bug (accessing files outside $DOCUMENT_ROOT)